--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-absl-py==0.2.2
+absl-py==0.4.0
 astor==0.6.2
-backports.weakref==1.0rc1
+backports.weakref==1.0.post1
 bleach==1.5.0
 certifi==2016.2.28
 cffi==1.10.0
+cloudpickle==0.5.5
 cycler==0.10.0
+dask==0.18.2
 decorator==4.1.2
-entrypoints==0.2.3
+enum34==1.1.6
 gast==0.2.0
 grpcio==1.12.0
 h5py==2.8.0
@@ -15,33 +17,26 @@ intel-openmp==2018.0.0
 ipykernel==4.6.1
 ipython==6.1.0
 ipython-genutils==0.2.0
-ipywidgets==6.0.0
 jedi==0.10.2
-Jinja2==2.9.6
-jsonschema==2.6.0
 jupyter-client==5.1.0
 jupyter-core==4.3.0
-Keras==2.0.5
+Keras==2.2.2
+Keras-Applications==1.0.4
+Keras-Preprocessing==1.0.2
 kiwisolver==1.0.1
-Mako==1.0.6
+Mako==1.0.7
 Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.2.2
-mistune==0.7.4
 mkl==2018.0.0
 mkl-devel==2018.0.0
 mkl-include==2018.0.0
 mmdnn==0.2.2
-nbconvert==5.2.1
-nbformat==4.4.0
 networkx==1.11
-nose==1.3.7
-notebook==5.0.0
 numpy==1.14.3
 olefile==0.44
 onnx==1.0.1
 opencv-python==3.4.2.17
-pandocfilters==1.4.2
 pexpect==4.2.1
 pickleshare==0.7.4
 Pillow==5.2.0
@@ -50,26 +45,24 @@ protobuf==3.5.2.post1
 ptyprocess==0.5.2
 pycparser==2.18
 Pygments==2.2.0
-pygpu==0.6.9
+pygpu==0.7.6
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.2
 PyWavelets==0.5.2
 PyYAML==3.12
 pyzmq==16.0.2
-scikit-image==0.13.0
-scikit-learn==0.19.0
-scipy==0.19.1
+scikit-image==0.14.0
+scipy==1.1.0
 simplegeneric==0.8.1
 six==1.11.0
 tensorboard==1.8.0
-tensorflow==1.3.0
-tensorflow-gpu==1.8.0
-tensorflow-tensorboard==0.1.5
+tensorflow==1.5.1
+tensorflow-gpu==1.4.0
+tensorflow-tensorboard==1.5.1
 termcolor==1.1.0
-terminado==0.6
-testpath==0.3
-Theano==0.9.0
+Theano==1.0.2
+toolz==0.9.0
 torch==0.5.0a0+467fc3c
 torchvision==0.2.1
 tornado==4.5.2
@@ -78,5 +71,5 @@ typing==3.6.2
 uuid==1.30
 wcwidth==0.1.7
 webcolors==1.8.1
+webencodings==0.5
 Werkzeug==0.14.1
-widgetsnbextension==3.0.2
